src/Grammar/IntepreterParser.java
// Generated from C:/Users/sala/Desktop/Compiladores/Compiladores\Intepreter.g4 by ANTLR 4.10.1
package Grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class IntepreterParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT_=1, BOOLEAN_=2, REAL_=3, STRING_=4, VOID_=5, PLUS_=6, MINUS_=7, MULT_=8, 
		DIV_=9, REMAINDER_=10, LT_=11, LTE_=12, GT_=13, GTE_=14, EQUAL_=15, NEQUAL_=16, 
		AND_=17, OR_=18, NOT_=19, LP_=20, RP_=21, SQUARE_LP_=22, SQUARE_RP_=23, 
		LCB_=24, RCB_=25, STRUCT_ACCESS_=26, BOOLVALUES_=27, POINTER_=28, ATRIBUTION_=29, 
		COLON_=30, KEYWORD_FUNCTION=31, IF_=32, THEN_=33, ELSE_=34, WHILE_=35, 
		FOR_=36, TO_=37, DOWNTO_=38, STEP_=39, RETURN_=40, TYPE_=41, IDENTIFIER_=42, 
		SEMICOLON_=43, LETTER_=44, DIGITS_=45, NUMBER_=46, STRING_VALUE_=47, SL_COMMENT=48, 
		ML_COMMENT=49, WHITE_SPACE=50;
	public static final int
		RULE_start = 0, RULE_instruction = 1, RULE_expression = 2, RULE_literal = 3, 
		RULE_types = 4, RULE_data_acess = 5, RULE_array_acess = 6, RULE_struct_acess = 7, 
		RULE_operation = 8, RULE_define_function = 9, RULE_arguments_define_function = 10, 
		RULE_call_function = 11, RULE_arguments_call_function = 12, RULE_codeblock = 13, 
		RULE_define_multiple_data = 14, RULE_define_single_data = 15, RULE_defining_data = 16, 
		RULE_value_attr_data = 17, RULE_statement_return = 18, RULE_statement_if = 19, 
		RULE_cicle = 20, RULE_statement_while = 21, RULE_statement_for = 22, RULE_define_struct = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "instruction", "expression", "literal", "types", "data_acess", 
			"array_acess", "struct_acess", "operation", "define_function", "arguments_define_function", 
			"call_function", "arguments_call_function", "codeblock", "define_multiple_data", 
			"define_single_data", "defining_data", "value_attr_data", "statement_return", 
			"statement_if", "cicle", "statement_while", "statement_for", "define_struct"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'int'", "'bool'", "'real'", "'string'", "'void'", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'and'", 
			"'or'", "'not'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", null, 
			"'^'", "'='", "','", null, "'if'", "'then'", "'else'", "'while'", "'for'", 
			"'to'", "'downto'", "'step'", "'return'", "'type'", null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INT_", "BOOLEAN_", "REAL_", "STRING_", "VOID_", "PLUS_", "MINUS_", 
			"MULT_", "DIV_", "REMAINDER_", "LT_", "LTE_", "GT_", "GTE_", "EQUAL_", 
			"NEQUAL_", "AND_", "OR_", "NOT_", "LP_", "RP_", "SQUARE_LP_", "SQUARE_RP_", 
			"LCB_", "RCB_", "STRUCT_ACCESS_", "BOOLVALUES_", "POINTER_", "ATRIBUTION_", 
			"COLON_", "KEYWORD_FUNCTION", "IF_", "THEN_", "ELSE_", "WHILE_", "FOR_", 
			"TO_", "DOWNTO_", "STEP_", "RETURN_", "TYPE_", "IDENTIFIER_", "SEMICOLON_", 
			"LETTER_", "DIGITS_", "NUMBER_", "STRING_VALUE_", "SL_COMMENT", "ML_COMMENT", 
			"WHITE_SPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Intepreter.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IntepreterParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(IntepreterParser.EOF, 0); }
		public List<Define_structContext> define_struct() {
			return getRuleContexts(Define_structContext.class);
		}
		public Define_structContext define_struct(int i) {
			return getRuleContext(Define_structContext.class,i);
		}
		public List<TerminalNode> SEMICOLON_() { return getTokens(IntepreterParser.SEMICOLON_); }
		public TerminalNode SEMICOLON_(int i) {
			return getToken(IntepreterParser.SEMICOLON_, i);
		}
		public List<Define_functionContext> define_function() {
			return getRuleContexts(Define_functionContext.class);
		}
		public Define_functionContext define_function(int i) {
			return getRuleContext(Define_functionContext.class,i);
		}
		public List<Define_multiple_dataContext> define_multiple_data() {
			return getRuleContexts(Define_multiple_dataContext.class);
		}
		public Define_multiple_dataContext define_multiple_data(int i) {
			return getRuleContext(Define_multiple_dataContext.class,i);
		}
		public List<Define_single_dataContext> define_single_data() {
			return getRuleContexts(Define_single_dataContext.class);
		}
		public Define_single_dataContext define_single_data(int i) {
			return getRuleContext(Define_single_dataContext.class,i);
		}
		public List<Value_attr_dataContext> value_attr_data() {
			return getRuleContexts(Value_attr_dataContext.class);
		}
		public Value_attr_dataContext value_attr_data(int i) {
			return getRuleContext(Value_attr_dataContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IntepreterListener ) ((IntepreterListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IntepreterListener ) ((IntepreterListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntepreterVisitor ) return ((IntepreterVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE_) {
				{
				{
				setState(48);
				define_struct();
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(58);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						setState(54);
						define_multiple_data();
						}
						break;
					case 2:
						{
						setState(55);
						define_single_data();
						}
						break;
					case 3:
						{
						setState(56);
						value_attr_data();
						}
						break;
					case 4:
						{
						}
						break;
					}
					setState(60);
					match(SEMICOLON_);
					}
					} 
				}
				setState(65);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(67); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(66);
				define_function();
				}
				}
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT_) | (1L << BOOLEAN_) | (1L << REAL_) | (1L << STRING_) | (1L << VOID_) | (1L << IDENTIFIER_))) != 0) );
			setState(71);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public TerminalNode SEMICOLON_() { return getToken(IntepreterParser.SEMICOLON_, 0); }
		public Statement_returnContext statement_return() {
			return getRuleContext(Statement_returnContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public CicleContext cicle() {
			return getRuleContext(CicleContext.class,0);
		}
		public Statement_ifContext statement_if() {
			return getRuleContext(Statement_ifContext.class,0);
		}
		public CodeblockContext codeblock() {
			return getRuleContext(CodeblockContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IntepreterListener ) ((IntepreterListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IntepreterListener ) ((IntepreterListener)listener).exitInstruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntepreterVisitor ) return ((IntepreterVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instruction);
		try {
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_:
			case BOOLEAN_:
			case REAL_:
			case STRING_:
			case KEYWORD_FUNCTION:
			case RETURN_:
			case IDENTIFIER_:
			case SEMICOLON_:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case RETURN_:
					{
					setState(73);
					statement_return();
					}
					break;
				case INT_:
				case BOOLEAN_:
				case REAL_:
				case STRING_:
				case KEYWORD_FUNCTION:
				case IDENTIFIER_:
				case SEMICOLON_:
					{
					setState(74);
					expression();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(77);
				match(SEMICOLON_);
				}
				break;
			case WHILE_:
			case FOR_:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				cicle();
				}
				break;
			case IF_:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				statement_if();
				}
				break;
			case LCB_:
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				codeblock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Value_attr_dataContext value_attr_data() {
			return getRuleContext(Value_attr_dataContext.class,0);
		}
		public Define_single_dataContext define_single_data() {
			return getRuleContext(Define_single_dataContext.class,0);
		}
		public Define_multiple_dataContext define_multiple_data() {
			return getRuleContext(Define_multiple_dataContext.class,0);
		}
		public Call_functionContext call_function() {
			return getRuleContext(Call_functionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IntepreterListener ) ((IntepreterListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IntepreterListener ) ((IntepreterListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntepreterVisitor ) return ((IntepreterVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expression);
		try {
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				value_attr_data();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				define_single_data();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(87);
				define_multiple_data();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(88);
				call_function();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode BOOLVALUES_() { return getToken(IntepreterParser.BOOLVALUES_, 0); }
		public TerminalNode DIGITS_() { return getToken(IntepreterParser.DIGITS_, 0); }
		public TerminalNode NUMBER_() { return getToken(IntepreterParser.NUMBER_, 0); }
		public TerminalNode STRING_VALUE_() { return getToken(IntepreterParser.STRING_VALUE_, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IntepreterListener ) ((IntepreterListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IntepreterListener ) ((IntepreterListener)listener).exitLiteral(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntepreterVisitor ) return ((IntepreterVisitor<? extends T>)visitor).visitLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLVALUES_) | (1L << DIGITS_) | (1L << NUMBER_) | (1L << STRING_VALUE_))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypesContext extends ParserRuleContext {
		public TerminalNode INT_() { return getToken(IntepreterParser.INT_, 0); }
		public TerminalNode BOOLEAN_() { return getToken(IntepreterParser.BOOLEAN_, 0); }
		public TerminalNode REAL_() { return getToken(IntepreterParser.REAL_, 0); }
		public TerminalNode STRING_() { return getToken(IntepreterParser.STRING_, 0); }
		public TypesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_types; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IntepreterListener ) ((IntepreterListener)listener).enterTypes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IntepreterListener ) ((IntepreterListener)listener).exitTypes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntepreterVisitor ) return ((IntepreterVisitor<? extends T>)visitor).visitTypes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypesContext types() throws RecognitionException {
		TypesContext _localctx = new TypesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_types);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT_) | (1L << BOOLEAN_) | (1L << REAL_) | (1L << STRING_))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Data_acessContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER_() { return getToken(IntepreterParser.IDENTIFIER_, 0); }
		public List<Array_acessContext> array_acess() {
			return getRuleContexts(Array_acessContext.class);
		}
		public Array_acessContext array_acess(int i) {
			return getRuleContext(Array_acessContext.class,i);
		}
		public Struct_acessContext struct_acess() {
			return getRuleContext(Struct_acessContext.class,0);
		}
		public Data_acessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data_acess; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IntepreterListener ) ((IntepreterListener)listener).enterData_acess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IntepreterListener ) ((IntepreterListener)listener).exitData_acess(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntepreterVisitor ) return ((IntepreterVisitor<? extends T>)visitor).visitData_acess(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Data_acessContext data_acess() throws RecognitionException {
		Data_acessContext _localctx = new Data_acessContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_data_acess);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(IDENTIFIER_);
			setState(99);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(96);
					array_acess();
					}
					} 
				}
				setState(101);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(102);
				struct_acess();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Array_acessContext extends ParserRuleContext {
		public TerminalNode SQUARE_LP_() { return getToken(IntepreterParser.SQUARE_LP_, 0); }
		public TerminalNode SQUARE_RP_() { return getToken(IntepreterParser.SQUARE_RP_, 0); }
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public Array_acessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_acess; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IntepreterListener ) ((IntepreterListener)listener).enterArray_acess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IntepreterListener ) ((IntepreterListener)listener).exitArray_acess(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntepreterVisitor ) return ((IntepreterVisitor<? extends T>)visitor).visitArray_acess(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Array_acessContext array_acess() throws RecognitionException {
		Array_acessContext _localctx = new Array_acessContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_array_acess);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(SQUARE_LP_);
			{
			setState(106);
			operation(0);
			}
			setState(107);
			match(SQUARE_RP_);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Struct_acessContext extends ParserRuleContext {
		public TerminalNode STRUCT_ACCESS_() { return getToken(IntepreterParser.STRUCT_ACCESS_, 0); }
		public Data_acessContext data_acess() {
			return getRuleContext(Data_acessContext.class,0);
		}
		public Struct_acessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_acess; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IntepreterListener ) ((IntepreterListener)listener).enterStruct_acess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IntepreterListener ) ((IntepreterListener)listener).exitStruct_acess(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntepreterVisitor ) return ((IntepreterVisitor<? extends T>)visitor).visitStruct_acess(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Struct_acessContext struct_acess() throws RecognitionException {
		Struct_acessContext _localctx = new Struct_acessContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_struct_acess);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(STRUCT_ACCESS_);
			setState(110);
			data_acess();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationContext extends ParserRuleContext {
		public Call_functionContext call_function() {
			return getRuleContext(Call_functionContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public Data_acessContext data_acess() {
			return getRuleContext(Data_acessContext.class,0);
		}
		public TerminalNode LP_() { return getToken(IntepreterParser.LP_, 0); }
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public TerminalNode RP_() { return getToken(IntepreterParser.RP_, 0); }
		public TerminalNode MINUS_() { return getToken(IntepreterParser.MINUS_, 0); }
		public TerminalNode NOT_() { return getToken(IntepreterParser.NOT_, 0); }
		public TerminalNode MULT_() { return getToken(IntepreterParser.MULT_, 0); }
		public TerminalNode DIV_() { return getToken(IntepreterParser.DIV_, 0); }
		public TerminalNode REMAINDER_() { return getToken(IntepreterParser.REMAINDER_, 0); }
		public TerminalNode PLUS_() { return getToken(IntepreterParser.PLUS_, 0); }
		public TerminalNode LT_() { return getToken(IntepreterParser.LT_, 0); }
		public TerminalNode LTE_() { return getToken(IntepreterParser.LTE_, 0); }
		public TerminalNode GT_() { return getToken(IntepreterParser.GT_, 0); }
		public TerminalNode GTE_() { return getToken(IntepreterParser.GTE_, 0); }
		public TerminalNode EQUAL_() { return getToken(IntepreterParser.EQUAL_, 0); }
		public TerminalNode NEQUAL_() { return getToken(IntepreterParser.NEQUAL_, 0); }
		public TerminalNode AND_() { return getToken(IntepreterParser.AND_, 0); }
		public TerminalNode OR_() { return getToken(IntepreterParser.OR_, 0); }
		public OperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IntepreterListener ) ((IntepreterListener)listener).enterOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IntepreterListener ) ((IntepreterListener)listener).exitOperation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IntepreterVisitor ) return ((IntepreterVisitor<? extends T>)visitor).visitOperation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperationContext operation() throws RecognitionException {
		return operation(0);
	}
